Fixed overflow of items

--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: 100px;
     
 }
 .home_content{
@@ -122,6 +121,7 @@ body{
     box-shadow: 0 0 10px #c40094 ;
     color: white;
     letter-spacing: 1px;
+    border-radius: 8px;
     transition: 1s;
 }
 .start_btn:hover{
@@ -322,6 +322,27 @@ transition: .4s;
     font-size: 20px;
     font-weight: 800;
 }
+.stop_quiz{
+    pointer-events: auto;
+    background-color: #c40094;
+    color: white;
+    box-shadow: 0 0 10px #c40094 ;
+    padding: 16px;
+    font-size: 22px;
+    margin-top: 10px;
+    border: 2px solid #fff;
+    width: 20%;
+    font-weight: 800;
+    border-radius: 8px;
+}
+.stop_quiz:hover{
+    background-color: black;
+    box-shadow: none;
+    box-shadow: 6px 6px 10px #c40094 ;
+    letter-spacing: 3px;
+    font-size: 20px;
+    cursor: pointer;
+}
 .next_button{
     border: 2px solid #fff;
     outline: none;
@@ -335,8 +356,8 @@ transition: .4s;
     /* pointer-events: none; */
     background-color: rgb(255, 255, 255,.3);
     color: white;
-
 }
+
 .next_button.active:hover{
     background-color: black;
     box-shadow: none;
